<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BundleExtrasExampleActivity!</string>
    <string name="app_name">BundleExtrasExample</string>
    <string name="name_label">Full Name</string>
    <string name="name_placeholder">Name Goes Here</string>
    <string name="gender_label">Gender</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="launch_w_data">Launch 2nd Activity and Send Data</string>
    <string name="launch">Launch Second Activity</string>
    <string name="age_label">Age</string>

</resources>